--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ input:checked + .slider:before {
       <div class="slider round"></div>
     </label>
     -->
-    <button class="button-xlarge pure-button pure-button-primary" >refresh</button>
+    <button class="pure-button pure-button-primary" >refresh</button>
     <input type="radio" name="auto-load" value="disable" checked>disable
     <input type="radio" name="auto-load" value="enable" >enable
     </div>
